# hft-market-maker

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists_improved.txt  CONTRIBUTING.md  Doxyfile  IMPROVEMENTS.md  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: benchmark_order_book.cpp
config/: config.json  fix_config.cfg
docs/: architecture.md
include/core/: fix_handler.h  order_book.h
include/data/: market_data_feed.h
include/models/: python_bridge.h
include/risk/: risk_manager.h
include/strategies/: market_maker_strategy.h
include/utils/: config_validator.h  logger.h
python/: requirements.txt
python/models/: statistical_models.py
scripts/: build.sh
src/: backtest.cpp  main.cpp
src/core/: fix_handler.cpp  order_book.cpp
src/data/: polygon_websocket_feed.cpp
src/models/: python_bridge.cpp
src/risk/: risk_manager.cpp
src/strategies/: avellaneda_stoikov.cpp
src/utils/: config_validator.cpp  logger.cpp
tests/: test_config_validator.cpp  test_order_book.cpp  test_risk.cpp  test_strategies.cpp
